lib_LTLIBRARIES = libjpostal_parser.la libjpostal_expander.la

libjpostal_expander_la_SOURCES = jpostal_AddressExpander.c
libjpostal_expander_la_CFLAGS = $(libpostal_CFLAGS)
libjpostal_expander_la_LIBADD = $(libpostal_LIBS)

libjpostal_parser_la_SOURCES = jpostal_AddressParser.c
libjpostal_parser_la_CFLAGS = $(libpostal_CFLAGS)
libjpostal_parser_la_LIBADD = $(libpostal_LIBS)
