lib_LTLIBRARIES = libjpostal_parser.la libjpostal_expander.la libjpostal_dedupe.la

libjpostal_expander_la_SOURCES = jpostal_AddressExpander.c
libjpostal_expander_la_CFLAGS = $(LIBPOSTAL_CFLAGS)
libjpostal_expander_la_LIBADD = $(LIBPOSTAL_LIBS)

libjpostal_parser_la_SOURCES = jpostal_AddressParser.c
libjpostal_parser_la_CFLAGS = $(LIBPOSTAL_CFLAGS)
libjpostal_parser_la_LIBADD = $(LIBPOSTAL_LIBS)

libjpostal_dedupe_la_SOURCES = jpostal_Dedupe.c
libjpostal_dedupe_la_CFLAGS = $(LIBPOSTAL_CFLAGS)
libjpostal_dedupe_la_LIBADD = $(LIBPOSTAL_LIBS)
